tests/ui/typech/visibility_field_construct_priv.lm
struct Foo {
    bar: Int32;
}

fn foo() {
    let foo = Foo {
        bar: 0
    };
}
